--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "Node server/server.js",
     "build": "cd client && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
