--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start": "Node server/server.js",
     "build": "cd client && npm run build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "install": "cd server && npm i && cd ../client && npm i"
   },
   "eslintConfig": {
     "extends": [
