--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "mern-server",
   "version": "1.0.0",
   "description": "",
+  "homepage": ".",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js && react-scripts start",
     "watch": "nodemon",
-    "seed": "node seeders/seed.js"
+    "seed": "node seeders/seed.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
